Chnaged the background colour of SplashScreen and added Bottom Navigation Bar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Halloween Pumpkins</string>
+    <string name="play">Start Game</string>
+    <string name="playing_guide">Play Guide</string>
 </resources>
